[package]
name = "lysine"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>", "CTCL ctcl.lgbt"]
readme = "README.md"
license = "MIT"
include = ["/src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md"]

[dependencies]
globwalk = "0.9.1"
serde = "1.0"
serde_json = "1.0"
pest = "2.7.13"
pest_derive = "2.7.13"
lazy_static = "1.5"
# used in striptags, spaceless & titles filters. Already pulled by globwalk
regex = "1.10"
# used in truncate filter and string iteration
unic-segment = "0.9"

# used in slugify filter
slug = {version = "0.1", optional = true}
# used in urlencode filter
percent-encoding = {version = "2.3", optional = true}
# used in filesizeformat filter
humansize = {version = "2.1", optional = true}
# used in date format filter
chrono = {version = "0.4.38", optional = true, default-features = false, features = ["std", "clock"]}
# used in date format filter
chrono-tz = {version = "0.10", optional = true}
# used in get_random function
rand = {version = "0.8", optional = true}

[dev-dependencies]
serde_derive = "1.0"
pretty_assertions = "1"
tempfile = "3"

[features]
default = ["builtins"]
builtins = ["urlencode", "slug", "humansize", "chrono", "chrono-tz", "rand"]
urlencode = ["percent-encoding"]
preserve_order = ["serde_json/preserve_order"]
date-locale = ["builtins", "chrono/unstable-locales"]
